--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
   <title>самая красивая</title>
   <style>
     .pd {
-      padding-left: 1200px;
+      padding-left: 970px;
+
     }
   </style>
   <style>
+    
     .le {
-      padding-left: 1220px;
+      padding-left: 1000px;
       text-align: 50px;
     }
     .btn {
@@ -28,7 +30,8 @@
     body {
       margin: 0;
       background-color: #fff3f3;
-
+width: 100vw;
+height: 100vh;
 
       font-size: 18px;
       color: #333;
@@ -89,6 +92,7 @@
 </head>
 
 <body>
+  
   <main>
     <!-- BEGIN (write your solution here) -->
     <h1>марина</h1>
